edit: video2 템플릿 삭제

--- a/css/main.css
+++ b/css/main.css
@@ -500,6 +500,9 @@ margin: 0;
   font-size: 22px;
   font-weight: 500;
 }
+#home .content-area .past-container .title {
+  width: 100%;
+}
 #home .content-area .template-wrap .date-view {
   width: 104px;
   text-align: center;
@@ -522,8 +525,8 @@ margin: 0;
 }
 #home .content-area .past-container {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
-  gap: 110px;
 }
 #home .content-area .past-container .past-item {
   flex: 0 0 300px;
