--- a/css/main.css
+++ b/css/main.css
@@ -481,12 +481,13 @@ margin: 0;
   padding-top: 70px;
 }
 #home .content-area .content-title {
+  margin-bottom: 40px;
   text-align: center;
   font-family: "IBM Plex Sans KR";
   font-size: 30px;
   font-weight: 600;
 }
-#home .content-area .content-title span {
+#home .content-area .content-title .title-descipt {
   margin-top: 10px;
   display: block;
   font-size: 16px;
@@ -494,12 +495,24 @@ margin: 0;
   font-weight: 400;
 }
 #home .content-area .template-item {
-  width: fit-content;
   margin: 0 auto;
   margin-top: 62px;
   display: flex;
-  gap: 198px;
   align-items: center;
+}
+#home .video-inner .template-item {
+  gap: 198px;
+}
+#home .making-inner .template-item {
+  justify-content: space-between;
+  background: lightblue;
+}
+#home .content-area .template-fit {
+  width: fit-content;
+  margin: 0 auto;
+} 
+#home .content-area .template-100 {
+  width: 100%;
 }
 #home .content-area .template-wrap .title {
   margin-bottom: 20px;
@@ -529,6 +542,9 @@ margin: 0;
 #home .content-area .recent-wrap {
   flex: 0 0 412px;
 }
+#home .content-area .preview-wrap {
+  flex: 0 0 570px;
+}
 #home .content-area .past-wrap {
   width: fit-content;
 }
@@ -546,8 +562,7 @@ margin: 0;
 }
 #home .content-area .template-wrap .tamplate-edit {
   display: block;
-  width: 100%;
-  padding: 92px;
+  padding: 92px 88px;
   margin: 0 auto;
   background: #F8F8F8;
   border: 1px solid #EFEFEF;
@@ -555,7 +570,55 @@ margin: 0;
   box-sizing: border-box;
   transition: all 0.1s linear;
 }
+#home .content-area .template-wrap .select-box {
+  display: block;
+}
 #home .content-area .template-wrap .tamplate-edit:hover {
+  border-color: #5228F4;
+}
+#home .content-area .preview-wrap .tamplate-box {
+  padding: 30px 0;
+  border-radius: 20px;
+  background: #FEFEFE;
+  box-shadow: 0px 4px 10px #00000070;
+}
+#home .content-area .layout-wrap {
+  width: 876px;
+  overflow: hidden;
+  background: lightgoldenrodyellow;
+}
+#home .content-area .layout-box {
+  display: flex;
+  gap: 20px;
+  background: lightgreen;
+}
+#home .content-area .layout-item {
+  width: 240px;
+  box-sizing: border-box;
+  background: lightpink;
+}
+#home .content-area .layout-descipt {
+  margin-top: 30px;
+  text-align: center;
+}
+#home .content-area .layout-descipt .ratio {
+  font-size: 22px;
+}
+#home .content-area .layout-descipt .detail {
+  font-size: 16px;
+  color: #868686;
+  line-height: 160%;
+}
+#home .content-area .select-box {
+  display: block;
+  width: 100%;
+  height: 240px;
+  overflow: hidden;
+  background: lightseagreen;
+  border-radius: 20px;
+  border: 2px solid transparent;
+}
+#home .content-area .select-box:hover {
   border-color: #5228F4;
 }
 #home .content-area .recent-wrap .templaete-img {
@@ -712,25 +775,34 @@ margin: 0;
   font-family: "IBM Plex Sans KR";
   font-style: normal;
 }
-#home .user-auth .user-auth-wrap .tab-view {
+#home .tab-view {
   display: flex;
   max-width: 452px;
   margin: 0 auto;
   margin-top: 10px;
 }
-#home .user-auth .user-auth-wrap .tab-view li {
+#home .video-tab {
+  max-width: 100%;
+}
+#home .tab-view li {
   flex: 1;
   padding: 17px 0;
   font-size: 18px;
   border-bottom: 2px solid;
 }
-#home .user-auth .user-auth-wrap .tab-view .tab-active {
+#home .tab-view .tab-active {
   color: #5228F4;
   border-color: #5228F4;
 }
-#home .user-auth .user-auth-wrap .tab-view .tab-disb {
+#home .tab-view .tab-disb {
   color: #CECECE;
   border: none;
+}
+#home .tab-view .tab-item {
+  text-align: center;
+}
+#home .tab-view .tab-item .tab-link {
+  color: #CECECE;
 }
 #home .user-auth .user-auth-wrap .guide-title {
   font-size: 18px;
