edit: 사용가이드 아이콘 수정

--- a/css/main.css
+++ b/css/main.css
@@ -657,7 +657,10 @@ margin: 0;
 }
 #home .content-area .mockup-img .mockup-content {
   position: absolute;
-  background: lightcoral;
+  width: 100%;
+  height: 100%;
+  border-radius: 38px;
+  background: rgba(240, 128, 128, 0.437);
 }
 #home .content-area .bottom-item {
   margin-top: 20px;
