--- a/css/main.css
+++ b/css/main.css
@@ -840,7 +840,7 @@ margin: 0;
   justify-content: center;
   gap: 3px;
   background: #FAF9FE;
-  border: 1px solid #EFEAFF;
+  border: 2px solid #EFEAFF;
   border-radius: 8px;
 }
 #home .content-area .edit-content {
@@ -1085,7 +1085,46 @@ margin: 0;
 #home .mockup-content .user-subtitle {
   color: #fafafa;
 }
-
+#home .reprodct-area {
+  background: #FEFEFE;
+  border-top: 1px solid;
+  border-bottom: 1px solid;
+  border-color: #EFEFEF;
+}
+#home .reprodct-control {
+  padding: 10px 72px;
+}
+#home .video-time {
+  align-items: center;
+}
+#home .video-time-text {
+  gap: 8px;
+}
+#home .video-time-item {
+  font-size: 22px;
+}
+#home .start-time {
+  color: #5228F4;
+}
+#home  .control-btn-wrap {
+  gap: 20px;
+}
+#home .reprodctBtn {
+  padding: 4px 8px;
+  align-items: center;
+  gap: 6px;
+}
+#home .speedBtn {
+  border: 2px solid #EFEAFF;
+  background: #FAF9FE;
+  font-size: 16px;
+}
+#home .playBtn {
+  padding: 4px 28px;
+  box-sizing: border-box;
+  border: 2px solid #5228F4;
+  background: #5228F4;
+}
 @media (max-width: 1538px) {
   #home .content-area .video-title {
     left: 0;
@@ -1104,6 +1143,8 @@ margin: 0;
   }
 }
 
+
+/* 팝업 */
 #home .pop-wrap {
   width: 100%;
   height: 100%;
