--- a/css/main.css
+++ b/css/main.css
@@ -611,6 +611,9 @@ margin: 0;
 #home .content-area .edit-inner .preview-wrap {
   max-width: 480px;
 }
+#home .content-area .edit1-item .preview-wrap {
+  max-width: 600px;
+}
 #home .content-area .past-wrap {
   max-width: fit-content;
   padding-left: 30px;
@@ -741,6 +744,10 @@ margin: 0;
   left: 50%;
 }
 #home .content-area .mockup-content .mock-title {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   top: 15%;
   transform: translateX(-50%);
   z-index: 2;
@@ -770,6 +777,11 @@ margin: 0;
 /* // 비율에 맞게 이미지가 변경되는 값 */
 
 #home .content-area .mockup-content .mock-subTitle {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0 4px;
   bottom: 15%;
   transform: translateX(-50%);
   z-index: 2;
@@ -1145,6 +1157,12 @@ margin: 0;
 
 
 /* 팝업 */
+#home .show-pop {
+  display: block;
+}
+#home .hide-pop {
+  display: none;
+}
 #home .pop-wrap {
   width: 100%;
   height: 100%;
@@ -1154,7 +1172,6 @@ margin: 0;
   transform: translate(-50%, -50%);
   background: #00000081;
   border: 1px solid #ddd;
-  display: none;
 }
 #home .pop-inner {
   width: fit-content;
@@ -1167,7 +1184,7 @@ margin: 0;
   left: 50%;
   transform: translate(-50%, -50%);
 }
-#home .templaete-add .pop-inner {
+#home .templaete-add-pop .pop-inner {
   width: 400px;
 }
 #home .pop-text {
